<resources>
    <string name="app_name">About Me</string>
    <string name="name">Maikel B</string>
    <string name="yellow_star">Yellow star</string>
    <string name="bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut aliquam purus sit amet luctus venenatis lectus. In fermentum posuere urna nec. Lorem donec massa sapien faucibus et molestie ac feugiat. Mi bibendum neque egestas congue quisque egestas. Morbi tempus iaculis urna id volutpat lacus laoreet non curabitur. Ac tincidunt vitae semper quis lectus nulla at. Tristique senectus et netus et. Sagittis aliquam malesuada bibendum arcu vitae elementum curabitur. Non curabitur gravida arcu ac. A arcu cursus vitae congue mauris rhoncus aenean vel elit.

Ac odio tempor orci dapibus ultrices in iaculis nunc. Integer vitae justo eget magna fermentum. Penatibus et magnis dis parturient montes nascetur. Nisl condimentum id venenatis a condimentum vitae sapien pellentesque. Tellus at urna condimentum mattis pellentesque id nibh tortor id. Tristique senectus et netus et malesuada fames ac turpis. Mauris cursus mattis molestie a iaculis at erat. Neque egestas congue quisque egestas diam. Dolor sit amet consectetur adipiscing elit ut aliquam purus. Quam nulla porttitor massa id. Enim tortor at auctor urna nunc. Metus dictum at tempor commodo ullamcorper a lacus vestibulum. Mus mauris vitae ultricies leo integer malesuada nunc. Massa sapien faucibus et molestie ac feugiat sed. In hac habitasse platea dictumst quisque sagittis purus sit. In nisl nisi scelerisque eu. Et netus et malesuada fames ac.

Habitant morbi tristique senectus et netus et malesuada fames ac. Pharetra massa massa ultricies mi quis hendrerit dolor magna eget. Sed velit dignissim sodales ut eu sem integer. Sit amet aliquam id diam. Diam vel quam elementum pulvinar etiam non. Quis blandit turpis cursus in hac habitasse platea. Ornare arcu odio ut sem nulla pharetra diam. Sodales ut eu sem integer. Pharetra magna ac placerat vestibulum lectus mauris ultrices eros. Eros donec ac odio tempor orci. Tortor pretium viverra suspendisse potenti nullam. Accumsan tortor posuere ac ut consequat semper viverra. Suscipit adipiscing bibendum est ultricies. Massa ultricies mi quis hendrerit dolor magna. Faucibus pulvinar elementum integer enim neque volutpat ac tincidunt vitae. Vitae purus faucibus ornare suspendisse sed.

Sollicitudin tempor id eu nisl nunc mi ipsum faucibus vitae. Semper eget duis at tellus at urna condimentum. Vitae congue eu consequat ac felis. Porttitor lacus luctus accumsan tortor posuere ac ut. Ac tortor dignissim convallis aenean et tortor. Mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare. Ullamcorper a lacus vestibulum sed arcu non. Quisque egestas diam in arcu. Aliquet sagittis id consectetur purus ut faucibus pulvinar elementum. In hendrerit gravida rutrum quisque non.

Commodo sed egestas egestas fringilla phasellus faucibus. Volutpat commodo sed egestas egestas fringilla phasellus faucibus. Id interdum velit laoreet id. Tincidunt eget nullam non nisi. Sem fringilla ut morbi tincidunt augue interdum velit euismod in. Malesuada proin libero nunc consequat interdum varius. Nunc mattis enim ut tellus elementum. Arcu dui vivamus arcu felis. Magna ac placerat vestibulum lectus mauris ultrices eros in. Proin nibh nisl condimentum id. Enim neque volutpat ac tincidunt vitae semper quis lectus. Curabitur vitae nunc sed velit dignissim. Risus viverra adipiscing at in tellus. Gravida rutrum quisque non tellus orci. Tortor pretium viverra suspendisse potenti nullam ac. Mauris rhoncus aenean vel elit. Suspendisse in est ante in nibh mauris cursus mattis. Nunc aliquet bibendum enim facilisis gravida neque convallis.</string>
    <string name="what_is_your_nickname">What is your nickname?</string>
    <string name="done_button_text">Done</string>
    <string name="edit_text" />
</resources>